--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ inputs:
   open_balena_address:
     description: "Provide address of intance for your OpenBalena cloud"
     required: true
-  open_root_cert:
+  root_cert:
     description: "Provide content of your root cert for your OpenBalena cloud"
     required: true
 runs:
